# 23203_valenko

./: .gitignore  CMakeLists.txt  basic_deck.cpp  basic_deck.h  card.cpp  card.h  console_interface.cpp  console_interface.h  creator.h  deck.h  engine.h  engine_1.cpp  engine_1.h  engine_2.cpp  engine_2.h  engine_3.cpp  engine_3.h  factory.h  game_of_life.cpp  hand.cpp  hand.h  hand_interface.h  hashtable.cpp  hashtable.h  hashtable_test.cpp  interface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  n_deck.cpp  n_deck.h  player.cpp  player.h  player_interface.h  simple_deck.cpp  simple_deck.h  strategy.h  strategy_1.cpp  strategy_1.h  (+14 more)
TorrentClient/: .gitignore  build.gradle.kts  settings.gradle.kts
lab_1/: hashtable.cpp  hashtable.h
lab_2/: CMakeLists.txt  basic_deck.cpp  card.h  console_interface.cpp  console_interface.h  deck.h  engine.h  engine_1.cpp  engine_1.h  engine_2.cpp  engine_2.h  engine_3.cpp  engine_3.h  engine_play.h  hand.cpp  hand.h  main.cpp  n_deck.cpp  n_deck.h  player.cpp  player.h  simple_deck.cpp  simple_deck.h  strategy.h  strategy_1.cpp  strategy_2.h  strategy_3.cpp  strategy_3.h  strategy_5.txt  strategy_config.cpp  strategy_config.h  strategy_play.h
lab_2/configs/: strategy_6.txt
lab_3/: CMakeLists.txt  Makefile  game_of_life.cpp  game_of_life.h  lab_3.pro  main.cpp
lab_3/build-gameOfLife-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  gameOfLife
lab_3/build-gameOfLife-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-f0583e55e8c5a1218f8e.json  codemodel-v2-ce7ede1d3397b6039e57.json  index-2025-01-21T08-20-04-0188.json  target-gameOfLife-Debug-6b64ce1dfe9fe4f7fa4f.json
lab_3/build-gameOfLife-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-3827398ca88450f186a3.json  codemodel-v2-8a85df502a6ac916ec95.json  index-2025-01-16T16-25-32-0328.json  target-gameOfLife-Debug-33655bc07a9f3919439b.json  target-gameOfLife_autogen-Debug-77dac8e65ac24b65c0ee.json
lab_3/build-gameOfLife-Desktop-Debug/gameOfLife_autogen/: mocs_compilation.cpp
lab_3/build-gameOfLife-Desktop-Debug/gameOfLife_autogen/EWIEGA46WW/: moc_engine.cpp  moc_engine.cpp.d  moc_game_of_life.cpp  moc_game_of_life.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
lab_3/build-gameOfLife-Desktop-Debug/gameOfLife_autogen/include/: ui_mainwindow.h
lab_3/gameOfLife/: CMakeLists.txt  engine.cpp  engine.h  game_of_life.cpp  game_of_life.h  gameengine.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tutorial/: .gitignore  build.gradle.kts
(+111 files in other folders)
